# ywh2bugtracker

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .mypy.ini  .python-version  Dockerfile  Makefile  Pipfile  README.md  main.py  poetry.toml  pyproject.toml  requirement.txt  setup.py  tox.ini  ywh_bugtracker.py
.gitlab/issue_templates/: Bug.md  Feature.md
docs/: User-Guide-defaults-html.yaml  User-Guide-defaults-pdf.yaml  User-Guide-defaults.yaml  User-Guide-header-html.html  User-Guide-header-pdf.tex  User-Guide.md
docs/examples/: example.yml
docs/pandoc/: Dockerfile
docs/user-guide/: User-Guide.html
stubs/: singledispatchmethod.pyi
stubs/aiosnow/: __init__.pyi  client.pyi  config.pyi  consts.pyi  exceptions.pyi  utils.pyi
stubs/aiosnow/models/: __init__.pyi
stubs/aiosnow/models/_base/: __init__.pyi  model.pyi  table.pyi
stubs/aiosnow/models/_schema/: __init__.pyi  nested.pyi  schema.pyi
stubs/aiosnow/models/attachment/: __init__.pyi  file.pyi  model.pyi  schema.pyi
stubs/aiosnow/models/table/: __init__.pyi  model.pyi
stubs/aiosnow/query/: __init__.pyi  condition.pyi  operators.pyi  selector.pyi  utils.pyi
stubs/aiosnow/query/fields/: __init__.pyi  base.pyi  boolean.pyi  datetime.pyi  integer.pyi  string.pyi  utils.pyi
stubs/aiosnow/request/: __init__.pyi  base.pyi  delete.pyi  get.pyi  methods.pyi  patch.pyi  post.pyi
stubs/aiosnow/request/helpers/: __init__.pyi  pagestream.pyi
stubs/aiosnow/request/response/: __init__.pyi  schemas.pyi
stubs/yeswehack/: api.pyi  exceptions.pyi
ywh2bt/: .gitignore  README.md  __init__.py  size.py  version.py  ywh2bt.py
ywh2bt/cli/: __init__.py  error.py  listener.py  main.py
ywh2bt/cli/commands/: __init__.py  convert.py  schema.py  synchronize.py  test.py  validate.py
ywh2bt/config/: __init__.py  abstract.py  main.py  packages.py  yeswehack.py
ywh2bt/core/: __init__.py  core.py  error.py  exceptions.py  html.py  listener.py  loader.py  mapping.py  markdown.py  serde.py
ywh2bt/core/api/: __init__.py  client.py  mapping.py  tracker.py  yeswehack.py
ywh2bt/core/api/formatter/: __init__.py  formatter.py  markdown.py
ywh2bt/core/api/models/: business_unit.py  program.py  report.py
ywh2bt/core/api/trackers/: __init__.py  gitlab.py
ywh2bt/core/configuration/: __init__.py  attribute.py  error.py  exportable.py  headers.py  root.py  subtypable.py  tracker.py  validatable.py  validator.py  yeswehack.py
ywh2bt/core/configuration/trackers/: __init__.py  github.py  gitlab.py  jira.py  servicenow.py
ywh2bt/core/converter/: __init__.py  html2jira.py  jira2markdown.py
ywh2bt/core/crypt/: __init__.py  decrypt.py  encrypt.py  error.py  key.py
ywh2bt/core/factories/: __init__.py  tracker_clients.py  yeswehack_api_clients.py
ywh2bt/core/mixins/: tracker_clients.py  yeswehack_api_clients.py
ywh2bt/core/schema/: __init__.py  error.py  json.py  markdown.py  protocol.py  text.py
ywh2bt/core/serializers/: __init__.py  json.py  yaml.py
ywh2bt/core/state/: __init__.py  decrypt.py  encrypt.py  error.py  state.py
ywh2bt/core/synchronizer/: __init__.py  error.py  listener.py  synchronizer.py
ywh2bt/core/tester/: __init__.py  error.py  listener.py  tester.py
ywh2bt/exceptions/: __init__.py
ywh2bt/gui/: __init__.py  hashing.py  main.py  resources.py  resources.qrc  settings.py  update_resources_file.py
ywh2bt/gui/dialog/: __init__.py  error.py  file.py  schema.py
ywh2bt/gui/resources/translations/: fr_FR.qm  fr_FR.ts
ywh2bt/gui/widgets/: __init__.py  constants.py  hinted_check_box_widget.py  logs_widget.py  main_window.py  root_configuration_entry.py  root_configuration_widget.py  root_configurations_widget.py  secret_line_edit_widget.py  tab_widget_helper.py  typing.py
ywh2bt/gui/widgets/attribute/: __init__.py  attributes_container_dict_entry.py  attributes_container_dict_entry_widget.py  attributes_container_dict_widget.py  attributes_container_list_widget.py  attributes_container_widget.py  exportable_dict_widget.py  exportable_list_widget.py
ywh2bt/gui/widgets/thread/: __init__.py  synchronizer.py  tester.py
ywh2bt/lib/: bugtracker.py  config.py  ywhgithub.py  ywhgitlab.py  ywhjira.py
ywh2bt/logging/: __init__.py
ywh2bt/tests/: main.py  resource.py  std_redirect.py  test_cli.py  test_size.py
ywh2bt/tests/core/: test_crypt.py  test_html.py  test_state.py
ywh2bt/tests/core/api/: test_tracker_issue_state.py  test_yeswehack.py
ywh2bt/tests/core/configuration/: test_attribute.py  test_headers.py  test_root.py  test_tracker.py  test_validator.py  test_yeswehack.py
ywh2bt/tests/core/converter/: test_jira2markdown.py
ywh2bt/tests/core/factories/: test_tracker_clients.py
ywh2bt/tests/core/mixins/: test_tracker_clients.py
ywh2bt/trackers/: __init__.py  bugtracker.py  ywhgithub.py  ywhgitlab.py  ywhjira.py
ywh2bt/utils/: __init__.py  html2jira.py
(+37 files in other folders)
